--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 </script>
 <body>
     <h1>首页</h1>
-    <a href="leslietong.top/page.html">点击</a>
+    <a href="/page.html">点击</a>
 </body>
 </html>
