--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <meta charset="utf-8">
 </head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-22NES0JJS8"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MS8QWKM0KR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-22NES0JJS8');
+  gtag('config', 'G-MS8QWKM0KR');
 </script>
 <body>
     <h1>首页</h1>
