--- a/page.html
+++ b/page.html
@@ -3,6 +3,15 @@
 <head>
 <meta charset="utf-8">
 </head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MS8QWKM0KR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MS8QWKM0KR');
+</script>
 <body>
     <h1>跳转页面</h1>
 </body>
