--- a/page.html
+++ b/page.html
@@ -4,13 +4,13 @@
 <meta charset="utf-8">
 </head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MS8QWKM0KR"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-226092698-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-MS8QWKM0KR');
+  gtag('config', 'UA-226092698-1');
 </script>
 <body>
     <h1>跳转页面</h1>
